Fixing theme toggle to be fixed on scroll due to overflow being taken off. Adding blog description for mobile on home page

--- a/src/assets/style/articlePreviews.scss
+++ b/src/assets/style/articlePreviews.scss
@@ -53,7 +53,18 @@
             }
 
             @include mobile {
-                margin: 50px 0px 50px 0px;
+                margin: 50px 0px 25px 0px;
+            }
+        }
+
+        h3 {
+            color: #c1c1c1;
+            text-align: center;
+            margin: 0px 0px 50px 0px;
+            padding: 0px 0px 0px 0px;
+
+            @include desktop {
+                display: none;
             }
         }
 
