--- a/src/assets/style/layout.scss
+++ b/src/assets/style/layout.scss
@@ -47,10 +47,10 @@ a {
 }
 
 .themeToggle {
-    position: absolute;
     top: 5px;
     left: 5px;
     z-index: 999;
+    position: fixed;
 }
 
 .bold {
